# BibleQuiz

./: README.md  pyproject.toml  setup.py
biblequiz/: app.py
biblequiz/rootend/: root_end_round.py
biblequiz/rootgame/: constructor_root_game.py  model_bancodedados_questions.py  view_root_game.py
biblequiz/rootlogin/: base_users.db  constructor_root_login.py  model_root_login.py  view_root_login.py
