[tool.poetry]
name = "biblequiz"
version = "0.1.0"
description = "Quiz sober a bíblia"
authors = ["devini <pedrinhovini318@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cx-freeze = "^7.0.0"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
